--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8">
   <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="/api-config.js"></script>
+  <script src="/config.js"></script>
   <title>人事系統</title>
 </head>
 
 <body>
   <div id="app"></div>
-  <script src="/api-config.js"></script>
   <script type="module" src="/src/main.js"></script>
 </body>
 
